RESOLVED FIXED 17929
Incorrect decompilation with |const|, comma
https://bugs.webkit.org/show_bug.cgi?id=17929
Summary Incorrect decompilation with |const|, comma
Jesse Ruderman
Reported 2008-03-18 17:57:44 PDT
> function f() { const x = (1, 2); } > f function f() { const x = 1, 2; } > eval("" + f) SyntaxError: Parse error Tested with (Safari 3.1) and (ToT Debug/testkjs).
Attachments
Patch-fu! (2.99 KB, patch)
2008-03-18 23:06 PDT, Oliver Hunt
mrowe: review+
Mark Rowe (bdash)
Comment 1 2008-03-18 18:59:51 PDT
Oliver Hunt
Comment 2 2008-03-18 23:06:39 PDT
Created attachment 19879 [details] Patch-fu!
Mark Rowe (bdash)
Comment 3 2008-03-18 23:12:41 PDT
Comment on attachment 19879 [details] Patch-fu! r=me. It'd be good if you could improve the grammar in the changelog entry (giant run-on sentences make me sad), and reference the bug URL in the layout test changelog too for easy reference.
Oliver Hunt
Comment 4 2008-03-18 23:18:13 PDT
M JavaScriptCore/ChangeLog M JavaScriptCore/kjs/nodes2string.cpp M LayoutTests/ChangeLog M LayoutTests/fast/js/function-toString-parentheses-expected.txt M LayoutTests/fast/js/resources/function-toString-parentheses.js Committed r31148
Note You need to log in before you can comment on or make changes to this bug.