JavaScriptCore/kjs/nodes2string.cpp
@@ -767,11 +767,11 @@ void ConstDeclNode::streamTo(SourceStream& s) const
 {
     s << m_ident;
     if (m_init)
-        s << " = " << m_init;
+        s << " = " << PrecAssignment << m_init;
     for (ConstDeclNode* n = m_next.get(); n; n = n->m_next.get()) {
-        s << ", " << m_ident;
+        s << ", " << n->m_ident;
         if (m_init)
-            s << " = " << m_init;
+            s << " = " << PrecAssignment << n->m_init;
     }
 }
 
